# MOOS-AIOrest

./: .gitignore  AIOrest.cpp  AIOrest.h  AIOrest_Info.cpp  AIOrest_Info.h  AIOrest_configuration.cpp  AIOrest_configuration.hpp  AIOrest_publisher.cpp  AIOrest_publisher.hpp  AIOrest_subscriber.cpp  AIOrest_subscriber.hpp  CMakeLists.txt  README.md  main.cpp  pAIOrest.moos
design/: SDD001.yml  SDD002.yml  SDD003.yml  SDD004.yml  SDD005.yml  SDD006.yml  SDD007.yml  SDD008.yml  SDD009.yml  SDD010.yml  SDD012.yml  SDD013.yml  SDD014.yml  SDD015.yml  SDD016.yml  SDD017.yml  SDD018.yml  SDD019.yml  SDD020.yml  SDD021.yml  SDD022.yml  SDD023.yml  SDD024.yml  SDD025.yml  SDD026.yml  SDD027.yml  SDD028.yml  SDD029.yml  SDD030.yml  SDD031.yml  SDD032.yml  SDD033.yml  SDD034.yml  SDD035.yml  SDD036.yml  SDD037.yml  SDD038.yml  SDD039.yml  SDD040.yml  SDD041.yml  (+172 more)
requirements/: SRD001.yml  SRD002.yml  SRD004.yml  SRD005.yml  SRD006.yml  SRD007.yml  SRD008.yml  SRD009.yml  SRD010.yml  SRD011.yml  SRD012.yml  SRD013.yml  SRD014.yml  SRD015.yml  SRD016.yml  SRD017.yml  SRD018.yml  SRD019.yml  SRD020.yml  SRD021.yml  SRD022.yml  SRD023.yml  SRD024.yml  SRD025.yml  SRD026.yml  SRD027.yml  SRD028.yml  SRD029.yml  SRD030.yml  SRD031.yml  SRD032.yml  SRD033.yml  SRD034.yml  SRD035.yml  SRD036.yml  SRD037.yml  SRD038.yml  SRD039.yml  SRD040.yml  SRD041.yml  (+2 more)
schema/: configuration_schema.json  data_response_schema.json  publish_schema.json  subscribe_schema.json
